fix yarn image dir

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
 
   yarn:
     build:
-      context: .
+      context: ./wp-content/themes/sage
       dockerfile: Dockerfile-yarn
     command:
       - yarn run build
